add code and instructions to reset line numbers for supplement

--- a/code/style.sty
+++ b/code/style.sty
@@ -50,11 +50,12 @@
 % highly recommended as an adjunct to serious mathematical typesetting:
 \usepackage{amsmath}
 % create a new command for supplements
-\newcommand{\beginsupplement}{%
+\newcommand{\beginsupplement}{
 		\clearpage
 		\pagenumbering{arabic}
 		\setcounter{table}{0}
-		\renewcommand{\thetable}{S\arabic{table}}%
+		\renewcommand{\thetable}{S\arabic{table}}
 		\setcounter{figure}{0}
-		\renewcommand{\thefigure}{S\arabic{figure}}%
+		\renewcommand{\thefigure}{S\arabic{figure}}
+		\preto{\section}{\resetlinenumber}
 	}
