add PFC to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -57,6 +57,7 @@
 \newacronym{NREM}{NREM}{non-rapid eye movement}
 \newacronym{OCD}{OCD}{obsessive-compulsive disorder}
 \newacronym{OFC}{OFC}{orbitofrontal cortex}
+\newacronym{PFC}{PFC}{prefrontal cortex}
 \newglossaryentry{PTSD}{
 name={PTSD},
 description={Post-traumatic stress disorder (PTSD) is a mental disorder that can develop after a person is exposed to a traumatic event, such as sexual assault, and can include a variety of symptoms like disturbing thoughts, feelings, and re-experiencing trauma-related events},
