minor modifications in tags etc.

--- a/code/bibliography.bib
+++ b/code/bibliography.bib
@@ -1595,7 +1595,7 @@ Only recently have we come to realize that the putative systemic division of lab
 	Abstract = {Remembering experiences that lead to reward is essential for survival. The hippocampus is required for forming and storing memories of events and places, but the mechanisms that associate specific experiences with rewarding outcomes are not understood. Event memory storage is thought to depend on the reactivation of previous experiences during hippocampal sharp wave ripples (SWRs). We used a sequence switching task that allowed us to examine the interaction between SWRs and reward. We compared SWR activity after animals traversed spatial trajectories and either received or did not receive a reward. Here, we show that rat hippocampal CA3 principal cells are significantly more active during SWRs following receipt of reward. This SWR activity was further enhanced during learning and reactivated coherent elements of the paths associated with the reward location. This enhanced reactivation in response to reward could be a mechanism to bind rewarding outcomes to the experiences that precede them.},
 	Author = {Singer, Annabelle C. and Frank, Loren M.},
 	Date-Added = {2020-01-08 13:44:35 +0100},
-	Date-Modified = {2020-01-08 13:45:03 +0100},
+	Date-Modified = {2020-02-18 08:59:35 +0100},
 	Doi = {10.1016/j.neuron.2009.11.016},
 	Issn = {0896-6273},
 	Journal = {Neuron},
@@ -1603,7 +1603,7 @@ Only recently have we come to realize that the putative systemic division of lab
 	Number = {6},
 	Pages = {910--921},
 	Publisher = {Elsevier BV},
-	Tags = {replay},
+	Tags = {replay; reward},
 	Title = {Rewarded Outcomes Enhance Reactivation of Experience in the Hippocampus},
 	Url = {http://dx.doi.org/10.1016/j.neuron.2009.11.016},
 	Volume = {64},
@@ -2013,12 +2013,13 @@ Only recently have we come to realize that the putative systemic division of lab
 	Abstract = {Spatial learning requires the hippocampus, and the replay of spatial sequences during hippocampal sharp wave-ripple (SPW-R) events of quiet wakefulness and sleep is believed to play a crucial role. To test whether the coordination of VTA reward prediction error signals with these replayed spatial sequences could contribute to this process, we recorded from neuronal ensembles of the hippocampus and VTA as rats performed appetitive spatial tasks and subsequently slept. We found that many reward responsive (RR) VTA neurons coordinated with quiet wakefulness-associated hippocampal SPW-R events that replayed recent experience. In contrast, coordination between RR neurons and SPW-R events in subsequent slow wave sleep was diminished. Together, these results indicate distinct contributions of VTA reinforcement activity associated with hippocampal spatial replay to the processing of wake and SWS-associated spatial memory.},
 	Author = {Gomperts, Stephen N and Kloosterman, Fabian and Wilson, Matthew A},
 	Date-Added = {2020-01-06 10:11:25 +0100},
-	Date-Modified = {2020-01-06 10:11:54 +0100},
+	Date-Modified = {2020-02-18 08:57:11 +0100},
 	Doi = {10.7554/elife.05360},
 	Issn = {2050-084X},
 	Journal = {eLife},
 	Month = {Oct},
 	Publisher = {eLife Sciences Publications, Ltd},
+	Tags = {replay},
 	Title = {{VTA} neurons coordinate with the hippocampal reactivation of spatial experience},
 	Url = {http://dx.doi.org/10.7554/eLife.05360},
 	Volume = {4},
@@ -2558,9 +2559,9 @@ Only recently have we come to realize that the putative systemic division of lab
 
 @article{Dave2000S,
 	Abstract = {Songbirds learn a correspondence between vocal-motor output and auditory feedback during development. For neurons in a motor cortex analog of adult zebra finches, we show that the timing and structure of activity elicited by the playback of song during sleep matches activity during daytime singing. The motor activity leads syllables, and the matching sensory response depends on a sequence of typically up to three of the preceding syllables. Thus, sensorimotor correspondence is reflected in temporally precise activity patterns of single neurons that use long sensory memories to predict syllable sequences. Additionally, ``spontaneous'' activity of these neurons during sleep matches their sensorimotor activity, a form of song ``replay.'' These data suggest a model whereby sensorimotor correspondences are stored during singing but do not modify behavior, and off-line comparison (e.g., during sleep) of rehearsed motor output and predicted sensory feedback is used to adaptively shape motor output.},
-	Author = {Dave, A. S.},
+	Author = {Dave, Amish S. and Margoliash, Daniel},
 	Date-Added = {2019-12-27 18:58:54 +0100},
-	Date-Modified = {2019-12-27 18:59:18 +0100},
+	Date-Modified = {2020-02-24 07:58:24 +0100},
 	Doi = {10.1126/science.290.5492.812},
 	Issn = {1095-9203},
 	Journal = {Science},
@@ -4742,7 +4743,7 @@ slow rhythm, effectively triggered hippocampal discharges related to fast (rippl
 	Abstract = {Memories of experiences are stored in the cerebral cortex. Sleep is critical forthe consolidation of hippocampal memory of wake experiences into the neo-cortex. Understanding representations of neural codes of hippocampal--neo-cortical networks  during sleep would reveal important circuit mechanisms inmemory  consolidation  and  provide  novel  insights  into  memory  and  dreams.Although  sleep-associated  ensemble  spike  activity  has  been  investigated,identifying the content of memory in sleep remains challenging. Here we revisitimportant experimentalfindings on sleep-associated memory (i.e., neural activ-ity patterns in sleep that reflect memory processing) and review computationalapproaches  to  the  analysis  of  sleep-associated  neural  codes  (SANCs).  Wefocus  on  two  analysis  paradigms  for  sleep-associated  memory and  proposea  new  unsupervised  learning  framework  (`memoryfirst,  meaning  later')  forunbiased assessment of SANCs.},
 	Author = {Chen, Zhe and Wilson, Matthew A.},
 	Date-Added = {2019-11-28 12:06:37 +0100},
-	Date-Modified = {2019-11-28 12:08:09 +0100},
+	Date-Modified = {2020-02-24 08:09:19 +0100},
 	Doi = {10.1016/j.tins.2017.03.005},
 	Issn = {0166-2236},
 	Journal = {Trends in Neurosciences},
@@ -4751,6 +4752,7 @@ slow rhythm, effectively triggered hippocampal discharges related to fast (rippl
 	Number = {5},
 	Pages = {260--275},
 	Publisher = {Elsevier BV},
+	Tags = {replay; review; memory consolidation},
 	Title = {Deciphering Neural Codes of Memory during Sleep},
 	Url = {http://dx.doi.org/10.1016/j.tins.2017.03.005},
 	Volume = {40},
