add FLAIR to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -21,6 +21,7 @@
 \newacronym{FDR}{FDR}{false discovery rate}
 \newacronym{FA}{FA}{flip angle}
 \newacronym{FD}{FD}{framewise displacement}
+\newacronym{FLAIR}{FLAIR}{fluid-attenuated inversion recovery}
 \newacronym{fMRI}{fMRI}{functional magnetic resonance imaging}
 \newacronym{FOV}{FOV}{field of view}
 \newacronym{FSL}{FSL}{FMRIB Software Library}
