add MPIB to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -49,6 +49,7 @@
 \newacronym{MEG}{MEG}{magnetoencephalography}
 \newacronym{MB}{MB}{multi-band}
 \newacronym{MNI}{MNI}{Montreal Neurological Institute}
+\newacronym{MPIB}{MPIB}{Max Planck Institute for Human Development}
 \newacronym{MRI}{MRI}{magnetic resonance imaging}
 \newacronym{ms}{ms}{milliseconds}
 \newacronym{min}{min}{minutes}
