add ECG to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -7,6 +7,7 @@
 \newacronym{CA1}{CA1}{cornu ammunis region 1 in the hippocampus}
 \newacronym{CSF}{CSF}{cerebrospinal fluid}
 \newacronym{DMN}{DMN}{default mode network}
+\newacronym{ECG}{ECG}{electrocardiography}
 \newglossaryentry{ECR}
 {
   name={ECR},
