add prediction error to glossary.tex

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -60,6 +60,7 @@
 \newacronym{NREM}{NREM}{non-rapid eye movement}
 \newacronym{OCD}{OCD}{obsessive-compulsive disorder}
 \newacronym{OFC}{OFC}{orbitofrontal cortex}
+\newacronym{PE}{PE}{prediction error}
 \newacronym{PFC}{PFC}{prefrontal cortex}
 \newglossaryentry{PTSD}{
 name={PTSD},
@@ -75,7 +76,7 @@ first={Post Traumatic Stress Disorder (PTSD)}
   plural={ROIs},
   descriptionplural={regions of interest},
   firstplural={\glsentrydescplural{ROI} (\glsentryplural{ROI})}
-} 
+}
 \newacronym{RL}{RL}{reinforcement learning}
 \newacronym{RSA}{RSA}{representational similarity analysis}
 \newacronym{s}{s}{seconds}
