remove check from babel language settings

--- a/code/style.sty
+++ b/code/style.sty
@@ -2,7 +2,7 @@
 %\usepackage[T1]{fontenc}
 %\usepackage[utf8]{inputenc}
 % select the language:
-\usepackage[ngerman, czech, english]{babel}
+\usepackage[ngerman, english]{babel}
 % for direct text quotes:
 \usepackage{epigraph}
 % import package to select multiple affiliations for authors:
