remove extra doi: for doi hyperlinks

--- a/code/apa_style.sty
+++ b/code/apa_style.sty
@@ -4,7 +4,7 @@
 \usepackage{hyperref}
 % change DOIs to hyperlinks:
 % modified to deal with special characters (https://tex.stackexchange.com/questions/3802/how-to-get-doi-links-in-bibliography/19734#19734)
-\newcommand*{\doi}[1]{\href{https://doi.org/\detokenize{#1}}{doi: \detokenize{#1}}}
+\newcommand*{\doi}[1]{\href{https://doi.org/\detokenize{#1}}{\detokenize{#1}}}
 % remove URLs from bibliography:
 \renewenvironment{APACrefURL}[1][]{}{}
 \AtBeginEnvironment{APACrefURL}{\renewcommand{\url}[1]{}}
