--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -56,6 +56,7 @@
 \newacronym{min}{min}{minutes}
 \newacronym{MPRAGE}{MPRAGE}{Magnetization Prepared Rapid Gradient Echo}
 \newacronym{MVPA}{MVPA}{multi-voxel pattern analysis}
+\newacronym{NA}{NA}{noradrenaline}
 \newacronym{NOUN}{NOUN}{Novel Object and Unusual Name}
 \newacronym{NREM}{NREM}{non-rapid eye movement}
 \newacronym{OCD}{OCD}{obsessive-compulsive disorder}
