--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -6,6 +6,7 @@
 \newacronym{BOLD}{BOLD}{blood-oxygen-level dependent}
 \newacronym{CA1}{CA1}{cornu ammunis region 1 in the hippocampus}
 \newacronym{CSF}{CSF}{cerebrospinal fluid}
+\newacronym{DA}{DA}{dopamine}
 \newacronym{DMN}{DMN}{default mode network}
 \newacronym{ECG}{ECG}{electrocardiography}
 \newglossaryentry{ECR}
