add GRAPPA to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -31,6 +31,7 @@
 \newacronym{GLM}{GLM}{general linear model}
 \newacronym{GM}{GM}{gray-matter}
 \newacronym{GR}{GR}{gradient recalled}
+\newacronym{GRAPPA}{GRAPPA}{GeneRalized Autocalibrating Partial Parallel Acquisition}
 \newglossaryentry{HRF}
 {
   name={HRF},
