add RS (repetition suppression) to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -82,6 +82,7 @@ first={Post Traumatic Stress Disorder (PTSD)}
   firstplural={\glsentrydescplural{ROI} (\glsentryplural{ROI})}
 }
 \newacronym{RL}{RL}{reinforcement learning}
+\newacronym{RS}{RS}{repetition suppression}
 \newacronym{RSA}{RSA}{representational similarity analysis}
 \newacronym{s}{s}{seconds}
 \newacronym{SI}{SI}{supplementary information}
