add curly brackets around accented author names (test)

--- a/code/bibliography.bib
+++ b/code/bibliography.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Wittkuhn, Lennart at 2020-03-30 11:17:04 +0200 
+%% Created for Wittkuhn, Lennart at 2020-03-30 15:30:08 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -735,9 +735,9 @@
 
 @article{Lavin2014FBN,
 	Abstract = {Pupil dilation under constant illumination is a physiological marker where modulation is related to several cognitive functions involved in daily decision making. There is evidence for a role of pupil dilation change during decision-making tasks associated with uncertainty, reward-prediction errors and surprise. However, while some work suggests that pupil dilation is mainly modulated by reward predictions, others point out that this marker is related to uncertainty signaling and surprise. Supporting the latter hypothesis, the neural substrate of this marker is related to noradrenaline (NA) activity which has been also related to uncertainty signaling. In this work we aimed to test whether pupil dilation is a marker for uncertainty and surprise in a learning task. We recorded pupil dilation responses in 10 participants performing the Iowa Gambling Task (IGT), a decision-making task that requires learning and constant monitoring of outcomes' feedback, which are important variables within the traditional study of human decision making. Results showed that pupil dilation changes were modulated by learned uncertainty and surprise regardless of feedback magnitudes. Interestingly, greater pupil dilation changes were found during positive feedback (PF) presentation when there was lower uncertainty about a future negative feedback (NF); and by surprise during NF presentation. These results support the hypothesis that pupil dilation is a marker of learned uncertainty, and may be used as a marker of NA activity facing unfamiliar situations in humans.},
-	Author = {{Lav{\'\i}n}, Claudio and San Mart{\'\i}n, Ren{\'e} and Rosales Jubal, Eduardo},
+	Author = {{Lav{\'\i}n}, Claudio and San {Mart{\'\i}n}, {Ren{\'e}} and Rosales Jubal, Eduardo},
 	Date-Added = {2020-02-28 17:49:13 +0100},
-	Date-Modified = {2020-02-28 17:50:03 +0100},
+	Date-Modified = {2020-03-30 15:29:53 +0200},
 	Doi = {10.3389/fnbeh.2013.00218},
 	Issn = {1662-5153},
 	Journal = {Frontiers in Behavioral Neuroscience},
