remove sans serif font

--- a/code/style.sty
+++ b/code/style.sty
@@ -1,6 +1,6 @@
 % set font and input encoding
 %\usepackage[T1]{fontenc}
-%\usepackage[utf8]{inputenc}
+\usepackage[utf8]{inputenc}
 % select the language:
 \usepackage[ngerman, english]{babel}
 % for direct text quotes:
@@ -29,10 +29,6 @@
 \usepackage{epstopdf}
 % adjust the margins of the document:
 \usepackage[a4paper, left=2cm, right=2cm, top=2cm, bottom=2cm]{geometry}
-% Set default font to sans serif
-\renewcommand{\familydefault}{\sfdefault}
-% change math font to sans serif
-\usepackage[italic]{mathastext}
 % 'isomath' sets upper case greek letters italic in accordance
 % with the International Standard ISO 80000-2
 \usepackage{isomath}
