add LFP (local field potential) to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -49,6 +49,7 @@
 \newacronym{ISI}{ISI}{inter-stimulus interval}
 \newacronym{IT}{IT}{information technology}
 \newacronym{ITI}{ITI}{inter-trial interval}
+\newacronym{LFP}{LFP}{local field potential}
 \newacronym{LME}{LME}{linear mixed effects}
 \newacronym{MEG}{MEG}{magnetoencephalography}
 \newacronym{MB}{MB}{multi-band}
