--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -33,6 +33,7 @@
 \newacronym{GM}{GM}{gray-matter}
 \newacronym{GR}{GR}{gradient recalled}
 \newacronym{GRAPPA}{GRAPPA}{GeneRalized Autocalibrating Partial Parallel Acquisition}
+\newacronym{Hz}{Hz}{Hertz}
 \newglossaryentry{HRF}
 {
   name={HRF},
