--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -60,6 +60,7 @@
 \newacronym{ms}{ms}{milliseconds}
 \newacronym{min}{min}{minutes}
 \newacronym{MPRAGE}{MPRAGE}{Magnetization Prepared Rapid Gradient Echo}
+\newacronym{MTL}{MTL}{medial temporal lobe}
 \newacronym{MVPA}{MVPA}{multi-voxel pattern analysis}
 \newacronym{NA}{NA}{noradrenaline}
 \newacronym{NOUN}{NOUN}{Novel Object and Unusual Name}
