add AI (artificial intelligence) and ML (machine learning) to glossary
and move MB (multiband) to correct alphabetical position

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -1,3 +1,4 @@
+\newacronym{AI}{AI}{artificial intelligence}
 \newacronym{ANTs}{ANTs}{Advanced Normalization Tools}
 \newacronym{ANOVA}{ANOVA}{analysis of variance}
 \newacronym{A-P}{A-P}{anterior-to-posterior}
@@ -52,8 +53,9 @@
 \newacronym{ITI}{ITI}{inter-trial interval}
 \newacronym{LFP}{LFP}{local field potential}
 \newacronym{LME}{LME}{linear mixed effects}
-\newacronym{MEG}{MEG}{magnetoencephalography}
 \newacronym{MB}{MB}{multi-band}
+\newacronym{MEG}{MEG}{magnetoencephalography}
+\newacronym{ML}{ML}{machine learning}
 \newacronym{MNI}{MNI}{Montreal Neurological Institute}
 \newacronym{MPIB}{MPIB}{Max Planck Institute for Human Development}
 \newacronym{MRI}{MRI}{magnetic resonance imaging}
