add DNN, DQN and TD to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -10,6 +10,8 @@
 \newacronym{DA}{DA}{dopamine}
 \newacronym{DGPs}{DGPs}{German Psychological Society}
 \newacronym{DMN}{DMN}{default mode network}
+\newacronym{DNN}{DNN}{deep neural network}
+\newacronym{DQN}{DQN}{Deep Q-Network}
 \newacronym{ECG}{ECG}{electrocardiography}
 \newglossaryentry{ECR}
 {
@@ -96,6 +98,7 @@ first={Post Traumatic Stress Disorder (PTSD)}
 \newacronym{S-R}{S-R}{stimulus-response}
 \newacronym{SWR}{SWR}{sharp wave-ripple}
 \newacronym{T1w}{T1w}{T1-weighted}
+\newacronym{TD}{TD}{temporal difference}
 \newacronym{TE}{TE}{echo time}
 \newacronym{TI}{TI}{inversion time}
 \newacronym{TR}{TR}{repetition time}
