--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -48,6 +48,7 @@
 }
 \newacronym{HSD}{HSD}{honest significant difference}
 \newacronym{iEEG}{iEEG}{intracranial electroencephalography}
+\newacronym{iid}{iid}{independent and identically distributed}
 \newacronym{INU}{INU}{intensity non-uniformity}
 \newacronym{IRB}{IRB}{institutional review board}
 \newacronym{ISI}{ISI}{inter-stimulus interval}
