add VTE (vicarious trial and error) to the glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -104,4 +104,5 @@ first={Post Traumatic Stress Disorder (PTSD)}
 \newacronym{TI}{TI}{inversion time}
 \newacronym{TR}{TR}{repetition time}
 \newacronym{VTA}{VTA}{ventral tegmental area}
+\newacronym{VTE}{VTE}{vicarious trial and error}
 \newacronym{WM}{WM}{white-matter}
