update all Foster, David J. citations

--- a/code/bibliography.bib
+++ b/code/bibliography.bib
@@ -545,9 +545,9 @@
 
 @article{Foster2002ML,
 	Abstract = {Solving in an efficient manner many different optimal control tasks within the same underlying environment requires decomposing the environment into its computationally elemental fragments. We suggest how to find fragmentations using unsupervised, mixture model, learning methods on data derived from optimal value functions for multiple tasks, and show that these fragmentations are in accord with observable structure in the environments. Further, we present evidence that such fragments can be of use in a practical reinforcement learning context, by facilitating online, actor-critic learning of multiple goals MDPs.},
-	Author = {Foster, David and Dayan, Peter},
+	Author = {Foster, David J. and Dayan, Peter},
 	Date-Added = {2020-03-27 13:14:03 +0100},
-	Date-Modified = {2020-03-31 14:28:13 +0200},
+	Date-Modified = {2020-04-07 14:11:09 +0200},
 	Doi = {10.1023/a:1017944732463},
 	Issn = {0885-6125},
 	Journal = {Machine Learning},
@@ -4772,9 +4772,9 @@ slow rhythm, effectively triggered hippocampal discharges related to fast (rippl
 
 @article{Foster2000H,
 	Abstract = {This paper presents a model of how hippocampal place cells might be used for spatial navigation in two watermaze tasks: the standard reference memory task and a delayed matching‐to‐place task. In the reference memory task, the escape platform occupies a single location and rats gradually learn relatively direct paths to the goal over the course of days, in each of which they perform a fixed number of trials. In the delayed matching‐to‐place task, the escape platform occupies a novel location on each day, and rats gradually acquire one‐trial learning, i.e., direct paths on the second trial of each day. The model uses a local, incremental, and statistically efficient connectionist algorithm called temporal difference learning in two distinct components. The first is a reinforcement‐based ``actor‐critic'' network that is a general model of classical and instrumental conditioning. In this case, it is applied to navigation, using place cells to provide information about state. By itself, the actor‐critic can learn the reference memory task, but this learning is inflexible to changes to the platform location. We argue that one‐trial learning in the delayed matching‐to‐place task demands a goal‐independent representation of space. This is provided by the second component of the model: a network that uses temporal difference learning and self‐motion information to acquire consistent spatial coordinates in the environment. Each component of the model is necessary at a different stage of the task; the actor‐critic provides a way of transferring control to the component that performs best. The model successfully captures gradual acquisition in both tasks, and, in particular, the ultimate development of one‐trial learning in the delayed matching‐to‐place task. Place cells report a form of stable, allocentric information that is well‐suited to the various kinds of learning in the model. },
-	Author = {Foster, D.J. and Morris, R.G.M. and Dayan, Peter},
+	Author = {Foster, David J. and Morris, R.G.M. and Dayan, Peter},
 	Date-Added = {2019-12-19 12:43:37 +0100},
-	Date-Modified = {2020-03-31 14:28:13 +0200},
+	Date-Modified = {2020-04-07 14:11:15 +0200},
 	Doi = {10.1002/(sici)1098-1063(2000)10:1<1::aid-hipo1>3.0.co;2-1},
 	Issn = {1098-1063},
 	Journal = {Hippocampus},
@@ -5750,9 +5750,9 @@ slow rhythm, effectively triggered hippocampal discharges related to fast (rippl
 
 @article{Silva2015NN,
 	Abstract = {Replay of hippocampal place cell sequences has been proposed as a fundamental mechanism of learning and memory. However, the standard interpretation of replay has been challenged by reports that similar activity is observed before experience ('preplay'). By the preplay account, pre-existing temporal sequences are mapped onto new experiences without learning sequential structure. Here we employed high density recording methods to monitor hundreds of place cells simultaneously while rats explored multiple novel environments. While we observed large numbers of synchronous spiking events before experience, they were not temporally correlated with subsequent experience. Multiple measures differentiated pre-experience and postexperience events that, taken together, defined the latter but not the former as trajectory-depicting. The formation of events with these properties was prevented by administration of an NMDA-receptor antagonist during experience. These results suggest that the sequential structure of behavioral episodes is encoded during experience and reexpressed as trajectory events.},
-	Author = {Silva, Delia and Feng, Ting and Foster, David J},
+	Author = {Silva, Delia and Feng, Ting and Foster, David J.},
 	Date-Added = {2019-12-04 12:37:23 +0100},
-	Date-Modified = {2020-03-31 14:28:13 +0200},
+	Date-Modified = {2020-04-07 14:10:22 +0200},
 	Doi = {10.1038/nn.4151},
 	Issn = {1546-1726},
 	Journal = {Nature Neuroscience},
@@ -6497,9 +6497,9 @@ slow rhythm, effectively triggered hippocampal discharges related to fast (rippl
 
 @article{Foster2012CON,
 	Abstract = {The hippocampus has long been associated with navigation and spatial representations, but it has been difficult to link directly the neurophysiological correlates of hippocampal place cells with navigational planning and action. In recent years, large-scale population recordings of place cells have revealed that spatial sequences are stored and activated in ways that may support navigational strategies. Plasticity mechanisms allow the hippocampus to store learned sequences of locations that may allow predictions of future locations based on past experience. These sequences can also be activated during navigational behavior in ways that may allow the animal to learn trajectories toward goals. Task-dependent alterations in place cell firing patterns may reflect the operation of the hippocampus in associating locations with navigationally relevant decision variables.},
-	Author = {Foster, David J and Knierim, James J},
+	Author = {Foster, David J. and Knierim, James J.},
 	Date-Added = {2019-11-27 11:17:28 +0100},
-	Date-Modified = {2020-03-31 14:28:13 +0200},
+	Date-Modified = {2020-04-07 14:10:57 +0200},
 	Doi = {10.1016/j.conb.2011.12.005},
 	Issn = {0959-4388},
 	Journal = {Current Opinion in Neurobiology},
@@ -8885,9 +8885,9 @@ slow rhythm, effectively triggered hippocampal discharges related to fast (rippl
 
 @article{Pfeiffer2015S,
 	Abstract = {Neuronal circuits produce self-sustaining sequences of activity patterns, but the precise mechanisms remain unknown. Here we provide evidence for autoassociative dynamics in sequence generation. During sharp-wave ripple (SWR) events, hippocampal neurons express sequenced reactivations, which we show are composed of discrete attractors. Each attractor corresponds to a single location, the representation of which sharpens over the course of several milliseconds, as the reactivation focuses at that location. Subsequently, the reactivation transitions rapidly to a spatially discontiguous location. This alternation between sharpening and transition occurs repeatedly within individual SWRs and is locked to the slow-gamma (25 to 50 hertz) rhythm. These findings support theoretical notions of neural network function and reveal a fundamental discretization in the retrieval of memory in the hippocampus, together with a function for gamma oscillations in the control of attractor dynamics.},
-	Author = {Pfeiffer, B. E. and Foster, D. J.},
+	Author = {Pfeiffer, B. E. and Foster, David J.},
 	Date-Added = {2019-11-01 12:37:44 +0100},
-	Date-Modified = {2020-03-31 14:28:13 +0200},
+	Date-Modified = {2020-04-07 14:10:16 +0200},
 	Doi = {10.1126/science.aaa9633},
 	Issn = {1095-9203},
 	Journal = {Science},
