add HIT (Human Intelligence Task) to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -36,6 +36,7 @@
 \newacronym{GM}{GM}{gray-matter}
 \newacronym{GR}{GR}{gradient recalled}
 \newacronym{GRAPPA}{GRAPPA}{GeneRalized Autocalibrating Partial Parallel Acquisition}
+\newacronym{HIT}{HIT}{Human Intelligence Task}
 \newacronym{Hz}{Hz}{Hertz}
 \newglossaryentry{HRF}
 {
