--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -98,6 +98,7 @@ first={Post Traumatic Stress Disorder (PTSD)}
 \newacronym{SI}{SI}{supplementary information}
 \newacronym{SEM}{SEM}{standard error of the mean}
 \newacronym{SNR}{SNR}{signal-to-noise ratio}
+\newacronym{SR}{SR}{successor representation}
 \newacronym{S-R}{S-R}{stimulus-response}
 \newacronym{SWR}{SWR}{sharp wave-ripple}
 \newacronym{T1w}{T1w}{T1-weighted}
