change dgps style to helvetica

--- a/code/dgps_style.sty
+++ b/code/dgps_style.sty
@@ -3,7 +3,9 @@
 \renewcommand{\dateseparator}{.}
 
 % change font to helvetica
-\usepackage{helvet}
+\usepackage[scaled]{helvet}
+\usepackage[T1]{fontenc}
+\renewcommand\familydefault{\sfdefault}
 
 % change color of section headings
 \usepackage{titlesec}
