add quotes command for proper quotation marks of words / sentences

--- a/code/style.sty
+++ b/code/style.sty
@@ -57,3 +57,5 @@
 		\renewcommand{\thefigure}{S\arabic{figure}}
 		\preto{\section}{\resetlinenumber}
 	}
+% create a new command for words / sentences in quotes
+\newcommand{\quotes}[1]{``#1''}
