enable sans-seif math typesetting in combination with Helvetica

--- a/code/dgps_style.sty
+++ b/code/dgps_style.sty
@@ -3,9 +3,11 @@
 \renewcommand{\dateseparator}{.}
 
 % change font to helvetica
-\usepackage[scaled]{helvet}
 \usepackage[T1]{fontenc}
+\usepackage{sansmathfonts}
+\usepackage[scaled]{helvet}
 \renewcommand\familydefault{\sfdefault}
+\renewcommand{\rmdefault}{\sfdefault}
 
 % change color of section headings
 \usepackage{titlesec}
