fix unicode character issue in Pedregosa2011JMLR

--- a/code/bibliography.bib
+++ b/code/bibliography.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Wittkuhn, Lennart at 2020-06-19 10:08:25 +0200 
+%% Created for Wittkuhn, Lennart at 2020-06-19 10:10:20 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -10984,9 +10984,9 @@ slow rhythm, effectively triggered hippocampal discharges related to fast (rippl
 	Abstract = {Scikit-learn is a Python module integrating a wide range of state-of-the-art machine learning algorithms for medium-scale supervised and unsupervised problems. This package focuses on bringing machine learning to non-specialists using a general-purpose high-level language. Emphasis is put on ease of use, performance, documentation, and API consistency. It has minimal dependencies and is distributed under the simplified BSD license, encouraging its use in both academic and commercial settings. Source code, binaries, and documentation can be downloaded from http://scikit-learn.sourceforge.net.},
 	Author = {Pedregosa, Fabian and Varoquaux, Gael and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and Vanderplas, Jake and Passos, Alexandre and Cournapeau, David and Brucher, Matthieu and Perrot, Matthieu and Duchesnay, Edouard},
 	Date-Added = {2019-11-06 17:23:18 +0100},
-	Date-Modified = {2020-06-19 10:08:15 +0200},
+	Date-Modified = {2020-06-19 10:10:20 +0200},
 	Journal = {Journal of Machine Learning Research},
-	Pages = {2825−2830},
+	Pages = {2825-2830},
 	Title = {Scikit-learn: Machine Learning in {Python}},
 	Volume = {12},
 	Year = {2011},
