add DPIA and DUA to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -11,7 +11,9 @@
 \newacronym{DGPs}{DGPs}{German Psychological Society}
 \newacronym{DMN}{DMN}{default mode network}
 \newacronym{DNN}{DNN}{deep neural network}
+\newacronym{DPIA}{DPIA}{Data Privacy Impact Assessment}
 \newacronym{DQN}{DQN}{Deep Q-Network}
+\newacronym{DUA}{DUA}{Data User Agreement}
 \newacronym{ECG}{ECG}{electrocardiography}
 \newglossaryentry{ECR}
 {
