add GDPR to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -34,6 +34,7 @@
 \newacronym{FOV}{FOV}{field of view}
 \newacronym{FSL}{FSL}{FMRIB Software Library}
 \newacronym{FWHM}{FWHM}{Full Width at Half Maximum}
+\newacronym{GDPR}{GDPR}{General Data Protection Regulation}
 \newacronym{GLM}{GLM}{general linear model}
 \newacronym{GM}{GM}{gray-matter}
 \newacronym{GR}{GR}{gradient recalled}
