add code for paragraph and text highlighting

--- a/code/dgps_style.sty
+++ b/code/dgps_style.sty
@@ -33,6 +33,13 @@
 % remove indentation for new paragraphs:
 \usepackage[parfill]{parskip}
 
+% add yellow-shaded box to highlight paragraph:
+\usepackage{xcolor}
+\usepackage{framed}
+\colorlet{shadecolor}{yellow!30}
+% add package for simple text highlighting:
+\usepackage{color,soul}
+
 \title{\vspace{-1cm}Antrag auf Stellungnahme der Ethikkommission der DGPs\vspace{-1.5cm}}
 \author{}
 \date{}
