--- a/code/hyphenation.sty
+++ b/code/hyphenation.sty
@@ -1,2 +1,8 @@
 \usepackage{hyphenat}
-\hyphenation{mensch-liche}
+\hyphenation{auf-zeich-nen auf-zeich-net}
+\hyphenation{be-stimm-te be-stimm-ten be-stimm-ter be-stimm-tes}
+\hyphenation{Funk-tions-wei-se}
+\hyphenation{Mag-net-re-so-nanz-to-mo-gra-phie}
+\hyphenation{mensch-liche mensch-lich mensch-li-cher}
+\hyphenation{ne-ga-tiv ne-ga-ti-ves ne-ga-ti-ver ne-ga-ti-ven ne-ga-ti-vem}
+\hyphenation{Ver-suchs-lei-ter Ver-suchs-lei-ter-in-nen Ver-suchs-lei-tern}
