add curly brackets to op de beeck citations

--- a/code/bibliography.bib
+++ b/code/bibliography.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Wittkuhn, Lennart at 2020-07-20 14:32:13 +0200 
+%% Created for Wittkuhn, Lennart at 2020-07-20 14:41:42 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -28,9 +28,9 @@
 
 @article{Op-de-Beeck2010aN,
 	Abstract = {Various arguments have been proposed for or against sub-voxel sensitivity or hyperacuity in functional magnetic resonance imaging (fMRI) at standard resolution. Sub-voxel sensitivity might exist, but nevertheless the performance of multi-voxel fMRI analyses is very likely to be dominated by a larger-scale organization, even if this organization is very weak. Up to now, most arguments are indirect in nature: they do not in themselves proof or contradict sub-voxel sensitivity, but they are suggestive, seem consistent or not with sub-voxel sensitivity, or show that the principle might or might not work. Here the previously proposed smoothing argument against hyperacuity is extended with simulations that include more realistic signal, noise, and analysis properties than any of the simulations presented before. These simulations confirm the relevance of the smoothing approach to find out the scale of the functional maps that underlie the outcome of multi-voxel analyses, at least in relative terms (differences in the scale of different maps). However, image smoothing, like most other arguments in the literature, is an indirect argument, and at the end of the day such arguments are not sufficient to decide the issue on whether and how much sub-voxel maps contribute. A few suggestions are made about the type of evidence that is needed to help us understand the as yet mysterious underpinnings of multi-voxel fMRI analyses.},
-	Author = {Op de Beeck, Hans P.},
+	Author = {{Op de Beeck}, Hans P.},
 	Date-Added = {2020-07-20 13:49:40 +0200},
-	Date-Modified = {2020-07-20 13:50:09 +0200},
+	Date-Modified = {2020-07-20 14:41:37 +0200},
 	Doi = {10.1016/j.neuroimage.2009.12.072},
 	Issn = {1053-8119},
 	Journal = {NeuroImage},
@@ -167,9 +167,9 @@
 
 @article{Op-de-Beeck2010N,
 	Abstract = {Recently it has been suggested that multivariate analyses of functional magnetic resonance imaging (fMRI) data can detect high spatial frequency components of cortical signals, like sub-millimeter columns. This `hyperacuity' seems to be at odds with the common assumption that the fMRI signal has a low spatial resolution due to the spatial spread of the underlying hemodynamic events. To resolve this apparent contradiction, I checked a very straightforward prediction of the hyperacuity hypothesis: if multivariate analyses are picking up a small-scale functional organization, then it can be expected that smoothing will be detrimental to the ability to decode these fine-scale spatial signals. I tested this prediction using data obtained with two paradigms to which multivariate techniques have been applied previously, including the decoding of grating orientation from the pattern of activity in primary visual cortex. It was found that smoothing does not decrease the sensitivity of multivariate analyses. Further simulations in which the scale of cortical organization was known indicate that this effect of smoothing contradicts the idea that the patterns detected with multivariate techniques reflect a fine-scale spatial organization.},
-	Author = {Op de Beeck, Hans P.},
+	Author = {{Op de Beeck}, Hans P.},
 	Date-Added = {2020-07-20 12:53:32 +0200},
-	Date-Modified = {2020-07-20 12:54:14 +0200},
+	Date-Modified = {2020-07-20 14:41:25 +0200},
 	Doi = {10.1016/j.neuroimage.2009.02.047},
 	Issn = {1053-8119},
 	Journal = {NeuroImage},
